--- a/css/style.css
+++ b/css/style.css
@@ -67,13 +67,27 @@ h2,h3,h4,h5,h6 {
   NAV BAR              
 -----------------------------------------*/
 
-.topnav {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
-    background-color: lightgray;
-    margin-bottom: 20px;
+    background-color: #333;
   }
   
-  .topnav h2 {
+  li {
     float: left;
-    height: 50px;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #111;
   }
