--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,19 @@ h2,h3,h4,h5,h6 {
     background: lightgray;
 }
 
+.content-container{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  padding: 100px;
+}
+
 /*---------------------------------------
   NAV BAR              
 -----------------------------------------*/
 
-  ul {
+  ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -85,6 +93,11 @@ h2,h3,h4,h5,h6 {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+  }
+
+  .header-logo{
+    font-weight: 700;
+    font-size: larger;
   }
   
   /* Change the link color to #111 (black) on hover */
