--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,28 @@ h2,h3,h4,h5,h6 {
     width: 80%;
     height: 10%;
     border-radius: 25px;
+    text-align: center;
+    color: #19191f;
+    text-decoration: none;
+}
+
+.new-user{
+  background: lightgray;
+  border: solid;
+  border-color: lightgrey;
+  width: 80%;
+  height: 10%;
+  border-radius: 25px;
+  text-align: center;
+  color: #19191f;
+  text-decoration: none;
+  padding-top: 10px;
+}
+
+.new-user:hover{
+  background: gray;
+  border-color: grey;
+  color: white;
 }
 
 .login-button:hover{
@@ -65,6 +87,16 @@ h2,h3,h4,h5,h6 {
 
 .content-container{
   padding: 100px;
+}
+
+.user-login-input{
+  width: 60%;
+  padding: 10px;
+  border: none;
+  margin-top: 20px;
+  margin-right: 16px;
+  font-size: 17px;
+  border: 1px solid #ccc;
 }
 
 /*---------------------------------------
@@ -163,4 +195,13 @@ h2,h3,h4,h5,h6 {
   padding: 10px;
   border-radius: 10px;
   border-color: #19191f;
+}
+
+/*---------------------------------------
+  FOOTER             
+-----------------------------------------*/
+
+.footer{
+  background-color: #19191f;
+  color: white;
 }
