--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,11 @@ h2,h3,h4,h5,h6 {
 
 
 /*---------------------------------------
+  BUTTONS          
+-----------------------------------------*/
+
+
+/*---------------------------------------
   FOOTER             
 -----------------------------------------*/
 
