--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,21 @@ h2,h3,h4,h5,h6 {
   text-align: center;*/
 }
 
+#aTime, #date, #status, #dTime, #deliverer_id_options, #customer_id_options{
+  width: 76%;
+  padding: 10px;
+  border: none;
+  margin-top: 0px;
+  font-size: 17px;
+  border: 1px solid #ccc;
+ /* border-radius: 25px; 
+  text-align: center;*/
+}
+
+#time_label{
+  margin-top: 10px;
+}
+
 
 #sign-up-button, #payment-button, .payment-edit, .payment-delete{
   background-color: lightgray;
